--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
-[workspace]
-members = [
-    "framework",
-    "problems/*",
-    "solver"
-]
+[package]
+name = "solver"
+version = "0.1.0"
+edition = "2018"
+
+[dependencies]
+clap = "^2"
+color-backtrace = "^0"
+itertools = "^0"
+once_cell = "^1"
